--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,6 +9,6 @@ import Logo from 'component:Logo'
 	</div>
 	<p class="center">
 		<img src="/public/construction.gif" /> <br/>
-		Stránky jsou prozatím ve výstavbě, děkujeme za pochopení
+		Stránky jsou prozatím ve výstavbě, děkujeme za pochopení 💙
 	</p>
 </Layout>
