--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import Logo from 'component:Logo'
 		<Logo width="300px"/>
 	</div>
 	<p class="center">
-		<img src="/public/construction.gif" /> <br/>
+		<img src="/img/construction.gif" /> <br/>
 		Stránky jsou prozatím ve výstavbě, děkujeme za pochopení 💙
 	</p>
 </Layout>
