--- a/src/components/Layout.astro
+++ b/src/components/Layout.astro
@@ -10,7 +10,7 @@ const { title, description, className , ogTitle, ogUrl, ogImage, ogType, ogDesri
     <meta charset="UTF-8" />
     <meta name="description" content={description}>
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="generator" content={Astro.generator} />
     {ogTitle && <meta property="og:title" content={ogTitle} />}
     {ogUrl && <meta property="og:url" content={ogUrl} />}
