--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -9,7 +9,7 @@ const { width } = Astro.props;
          SOUSEDI
       </textPath>
     </text>
-    <text x="180" y="150" style="font-size: 90px;">
+    <text x="50%" y="150" text-anchor="middle" style="font-size: 90px;">
       🤝
     </text>
 
