--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,95 +1,50 @@
----
-import Logo from 'component:Logo'
-const emojis = ['🏫', '🏠', '🏡', '🏢', '🏦', '🏨', '🏪', '🏬', '🏭', '🏰', '⛪', '🏛', '🏗', '🏘', '🏙', '🏚', '🏥', '🏣', '🏤', '🏩', '🏯']
-
-
----
 <header>
-  <img src="/img/znak-orlove.jpg" />
-  <Logo width="300px"/>
-  <img src="/img/znak-slezska.svg" />
-</header>
-
-<section class="hero-section">
-  <div class="loop-container">
-    <div class="item">{emojis.sort(() => Math.random() - 0.5)}</div>
-    <div class="item">{emojis.sort(() => Math.random() - 0.5)}</div>
+  <div class="container">
+    <div class="menu">
+      <a class="menu__logo" href="/">
+        Sousedi
+      </a>
+      <a href="#">Aktuality</a>
+      <a href="#">O nás</a>
+      <a href="#">Kontakt</a>
+    </div>
   </div>
-</section>
+</header>
 
 <style>
   header {
+    background: #00336e;
+    color: white;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+  }
+
+  .menu {
+    font-size: 2rem;
+    line-height: 2.5rem;
     display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-
-    img {
-      width: 20%;
-      max-width: 100px;
-      height: auto;
-      margin: 10px 20px;
-    }
+    gap: 2rem;
   }
 
-  .hero-section {
-    padding: 12px 0px;
-    position: relative;
-    overflow: hidden;
-    font: normal 3vw/1 sans-serif;
-    @media (min-width: 1000px) {
-      font-size: 32px;
-    }
+  a {
+    text-decoration: none;
+    color: white;
+    height: 2.5rem;
+    display: flex;
+    font-size: 1.5rem;
   }
+
+  a:not(.menu__logo):hover {
+    text-decoration: underline;
+  }
+
+  .menu__logo {
+    font-weight: bold;
+    text-transform: uppercase;
+    padding-right: 3rem;
+    background: transparent url('/img/znak-orlove.png') right center no-repeat;
+    background-size: 2.5rem;
+    font-size: 2rem;
+  }
+
 </style>
-
-<script>
-
-const lerp = (current: number, target: number, factor: number) => current * (1 - factor) + target * factor;
-
-class LoopingText {
-  el: HTMLElement
-  lerp: {current: number, target: number}
-  interpolationFactor: number
-  speed: number
-  direction : number
-  constructor(el: HTMLElement) {
-    this.el = el;
-    this.lerp = {current: 0, target: 0};
-    this.interpolationFactor = 0.1;
-    this.speed = 0.2;
-    this.direction = -1; // -1 (to-left), 1 (to-right)
-
-    // Init
-    this.el.style.cssText = `position: relative; display: inline-flex; white-space: nowrap;`;
-    (this.el.children[1] as HTMLElement).style.cssText = `position: absolute; left: ${100 * -this.direction}%;`;
-    this.events();
-    this.render();
-  }
-
-  events() {
-    window.addEventListener("scroll", () => this.lerp.target += this.speed * 5);
-  }
-
-  animate() {
-    this.lerp.target += this.speed;
-    this.lerp.current = lerp(this.lerp.current, this.lerp.target, this.interpolationFactor);
-
-    if (this.lerp.target > 100) {
-      this.lerp.current -= this.lerp.target;
-      this.lerp.target = 0;
-    }
-
-    const x = this.lerp.current * this.direction;
-    this.el.style.transform = `translateX(${x}%)`;
-  }
-
-  render() {
-    this.animate();
-    window.requestAnimationFrame(() => this.render());
-  }
-}
-
-document.querySelectorAll(".loop-container").forEach(el => new LoopingText(el as HTMLElement));
-
-</script>
