--- a/src/components/RetroLogo.astro
+++ b/src/components/RetroLogo.astro
@@ -3,8 +3,8 @@ const { width } = Astro.props;
 ---
 
 <svg viewBox="0 -40 500 220" width={width}>
-  <path id="curve" d="M73.2,148.6c4-6.1,65.5-96.8,178.6-95.6c111.3,1.2,170.8,90.3,175.1,97" />
-    <text width="500">
+  <path fill="transparent" id="curve" d="M73.2,148.6c4-6.1,65.5-96.8,178.6-95.6c111.3,1.2,170.8,90.3,175.1,97" />
+    <text fill="black" width="500">
       <textPath xlink:href="#curve" style="font-size: 90px;">
          SOUSEDI
       </textPath>
@@ -12,7 +12,6 @@ const { width } = Astro.props;
     <text x="50%" y="150" text-anchor="middle" style="font-size: 90px;">
       🤝
     </text>
-
 </svg>
 
 
