--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,12 @@
 ---
+import Jumbotron from 'component:Jumbotron'
 import Layout from 'layout:Layout'
 ---
 
 <Layout>
+	<Jumbotron title="V Orlové svítá na lepší časy" height="30rem" image="soumrak_v_orlove.jpeg" />
 	<p class="center">
-		<img src="/img/construction.gif" /> <br/>
+		<img src="/img/retro/construction.gif" /> <br/>
 		Stránky jsou prozatím ve výstavbě, děkujeme za pochopení 💙
 	</p>
 </Layout>
