--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="menu">
       <a class="menu__logo" href="/">
-        Sousedi
+        Sousedi 🤝
       </a>
       <a href="#">Aktuality</a>
       <a href="#">O nás</a>
@@ -41,9 +41,7 @@
   .menu__logo {
     font-weight: bold;
     text-transform: uppercase;
-    padding-right: 3rem;
-    background: transparent url('/img/znak-orlove.png') right center no-repeat;
-    background-size: 2.5rem;
+
     font-size: 2rem;
   }
 
