--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -50,12 +50,15 @@ import Footer from '../components/Footer.astro'
     font-size: 16px;
   }
 
-  /* @media (max-width: 800px) {
-    html {font-size: 90%; }
+  @media (max-width: 800px) {
+    html {font-size: 80%; }
   }
   @media (max-width: 600px) {
-    html { font-size: 85%; }
-  } */
+    html { font-size: 70%; }
+  }
+  @media (max-width: 400px) {
+    html { font-size: 60%; }
+  }
 
   .container {
     max-width: 75rem;
