--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import Layout from 'layout:Layout'
 ---
 
 <Layout>
-	<Jumbotron title="V Orlové svítá na lepší časy" height="30rem" image="soumrak_v_orlove.jpeg" />
+	<Jumbotron title="V Orlové svítá na lepší časy" height="30rem" image="soumrak_v_orlove.jpeg" position="bottom" />
 	<p class="center">
 		<img src="/img/retro/construction.gif" /> <br/>
 		Stránky jsou prozatím ve výstavbě, děkujeme za pochopení 💙
