--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,1 +1,25 @@
-Facebook Instagram
+<footer>
+  <div class="container">
+    <a href="https://www.facebook.com/sousediorlova">Facebook</a>
+    &bullet;
+    <a href="https://www.instagram.com/nejlepsimesto">Instagram</a>
+    &bullet;
+    <a href="/kalendar">Kalendář akcí</a>
+  </div>
+</footer>
+
+<style>
+  footer {
+    background: #00336e;
+    color: white;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    text-align: center;
+  }
+  a {
+    text-decoration: none;
+    color: white;
+    height: 2.5rem;
+  }
+  a:hover { text-decoration: underline; }
+</style>
