--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -40,7 +40,7 @@ import Footer from '../components/Footer.astro'
 </html>
 
 <style is:global>
-  @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500');
+  @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;700');
   html, body {
     margin: 0;
     padding: 0;
@@ -77,6 +77,11 @@ import Footer from '../components/Footer.astro'
 
   .layout__content {
     flex: 1 0 100%;
+  }
+
+  main {
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
   }
 
   h1, h2, h3 { margin: 0 0 1.5rem; font-weight: 500; }
