--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,9 +4,9 @@
       <a class="menu__logo" href="/">
         Sousedi 🤝
       </a>
-      <a href="#">Aktuality</a>
-      <a href="#">O nás</a>
-      <a href="#">Kontakt</a>
+      <a href="/aktuality">Aktuality</a>
+      <a href="/o-nas">O nás</a>
+      <a href="/kontakt">Kontakt</a>
     </div>
   </div>
 </header>
@@ -39,7 +39,7 @@
   }
 
   .menu__logo {
-    font-weight: bold;
+    font-weight: 500;
     text-transform: uppercase;
 
     font-size: 2rem;
