--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -40,7 +40,7 @@ import Footer from '../components/Footer.astro'
 </html>
 
 <style is:global>
-  @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;700');
+  @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500');
   html, body {
     margin: 0;
     padding: 0;
