--- a/src/pages/o-nas.astro
+++ b/src/pages/o-nas.astro
@@ -8,7 +8,7 @@ import Layout from 'layout:Layout'
   <Jumbotron title="Kdo jsme?" image="soumrak_v_orlove.jpeg" position="bottom" />
   <main class="container">
       <p>
-        Jsme neformální parta obyvatel Orlové a okolí, která se rozhodla přiložit ruku k dílu a zlepšit život v našem městě jak jeho obyvatelům, tak návštěvníkům a s tím i vylepšit naši reputaci. Naše společné zájmy jsou:
+        Jsme neformální parta obyvatel Orlové a okolí, která se rozhodla přiložit ruku k dílu a zlepšit život v našem městě jak jeho obyvatelům, tak návštěvníkům, a tím tak i vylepšit naši reputaci. Naše společné zájmy jsou:
       </p>
       <ul>
         <li>Kultivace veřejného prostoru 🏛</li>
