--- a/src/pages/aktuality.astro
+++ b/src/pages/aktuality.astro
@@ -5,11 +5,9 @@ import Layout from 'layout:Layout'
 ---
 
 <Layout>
-  <Jumbotron height="30rem" title="V Orlové svítá na lepší časy" image="soumrak_v_orlove.jpeg" position="bottom" />
+  <Jumbotron title="Co nového?" image="soumrak_v_orlove.jpeg" position="bottom" />
   <main class="container">
     <div class="center">
-
-      <h2>Aktuality</h2>
       <p>
         Zatím zde nemáme žádné aktuality.
       <p>
