--- a/src/pages/aktuality.astro
+++ b/src/pages/aktuality.astro
@@ -9,7 +9,7 @@ import Layout from 'layout:Layout'
   <main class="container">
     <div class="center">
       <p>
-        Zatím zde nemáme žádné aktuality.
+        Zatím vše při starém.
       <p>
     </div>
   </main>
