--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,9 @@ import Layout from 'layout:Layout'
       <div class="next-event">
         Načítám...
       </div>
+      <p>
+        Další akce můžete najít v našem <a href="/kalendar">kalendáři</a>.
+      </p>
     </div>
   </main>
 </Layout>
