--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,7 +4,7 @@
       <a class="menu__logo" href="/">
         Sousedi 🤝
       </a>
-      <a href="/aktuality">Aktuality</a>
+      <a href="/clanky">Aktuality</a>
       <a href="/o-nas">O nás</a>
       <a href="/kontakt">Kontakt</a>
     </div>
