--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import Layout from 'layout:Layout'
 ---
 
 <Layout>
-  <Jumbotron height="30rem" title="V Orlové svítá na lepší časy" image="soumrak_v_orlove.jpeg" position="bottom" />
+  <Jumbotron height="30rem" title="V Orlové svítá na lepší časy" image="soumrak_v_orlove.jpg" position="bottom" />
   <main class="container">
     <div class="center">
       <h2>Nejbližší akce:</h2>
