--- a/src/pages/kontakt.astro
+++ b/src/pages/kontakt.astro
@@ -5,7 +5,7 @@ import Layout from 'layout:Layout'
 ---
 
 <Layout>
-  <Jumbotron title="Kde nás najdete?" image="soumrak_v_orlove.jpeg" position="bottom" />
+  <Jumbotron title="Kde nás najdete?" image="soumrak_v_orlove.jpg" position="bottom" />
   <main class="container">
       <p>
         Rádi se s vámi potkáme na jakékoliv akci, kterou pořádáme nebo které se účastníme. Všechny tyto akce najdete v našem <a href="/kalendar">Kalendáři akcí.</a>
