--- a/src/pages/o-nas.astro
+++ b/src/pages/o-nas.astro
@@ -5,7 +5,7 @@ import Layout from 'layout:Layout'
 ---
 
 <Layout>
-  <Jumbotron title="Kdo jsme?" image="soumrak_v_orlove.jpeg" position="bottom" />
+  <Jumbotron title="Kdo jsme?" image="soumrak_v_orlove.jpg" position="bottom" />
   <main class="container">
       <p>
         Jsme neformální parta obyvatel Orlové a okolí, která se rozhodla přiložit ruku k dílu a zlepšit život v našem městě jak jeho obyvatelům, tak návštěvníkům, a tím tak i vylepšit naši reputaci. Naše společné zájmy jsou:
