--- a/src/pages/clanky/[slug].astro
+++ b/src/pages/clanky/[slug].astro
@@ -20,7 +20,6 @@ export async function getStaticPaths() {
 
 const { Content, frontmatter } = Astro.props.post;
 const { title, image, publishDate } = frontmatter;
-// const { slug, readingTime } = getPostData(Astro.props.post);
 
 ---
 
@@ -33,3 +32,15 @@ const { title, image, publishDate } = frontmatter;
     </article>
   </div>
 </Layout>
+
+<style>
+article {
+  font-size: 1.5rem;
+  img {
+    display: block;
+    width: 100%;
+    max-width: 800px;
+    margin: 1rem auto;
+  }
+}
+</style>
