font size tunning

--- a/src/pages/o-nas.astro
+++ b/src/pages/o-nas.astro
@@ -18,3 +18,7 @@ import Layout from 'layout:Layout'
       <p>Zaujala vás naše činnost a chtěli byste se přidat? Sledovat nás můžete na <a href="https://www.facebook.com/sousediorlova">Facebooku</a> či <a href="https://www.instagram.com/nejlepsimesto">Instagramu</a>, v <a href="/kalendar">kalendáři</a> najdete všechny naše plánované akce anebo nám můžete napsat email na <a href="mailto:orlova@sousedi.net">orlova@sousedi.net</a>.</p>
   </main>
 </Layout>
+
+<style>
+  p, ul { font-size: 1.4rem; }
+</style>
