--- a/src/pages/clanky/[slug].astro
+++ b/src/pages/clanky/[slug].astro
@@ -33,9 +33,10 @@ const { title, image, publishDate } = frontmatter;
   </div>
 </Layout>
 
-<style>
+<style is:global>
 article {
   font-size: 1.4rem;
+  p {max-width: 100%;}
   img {
     display: block;
     width: 100%;
