import alias fix

--- a/src/components/RetroHeader.astro
+++ b/src/components/RetroHeader.astro
@@ -1,5 +1,5 @@
 ---
-import Logo from 'component:RetroLogo'
+import Logo from '@components/RetroLogo.astro'
 const emojis = ['🏫', '🏠', '🏡', '🏢', '🏦', '🏨', '🏪', '🏬', '🏭', '🏰', '⛪', '🏛', '🏗', '🏘', '🏙', '🏚', '🏥', '🏣', '🏤', '🏩', '🏯']
 
 
