--- a/src/pages/clanky/[slug].astro
+++ b/src/pages/clanky/[slug].astro
@@ -1,7 +1,6 @@
 ---
-// import Jumbotron from 'component:Jumbotron'
-import Jumbotron from 'component:Jumbotron'
-import Layout from 'layout:Layout'
+import Jumbotron from '@components/Jumbotron.astro'
+import Layout from '@layouts/Layout.astro'
 
 type Post = {
   file: string
