--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -96,6 +96,6 @@ import Footer from '../components/Footer.astro'
   .nowrap { white-space: nowrap; }
   .center { text-align: center; }
   .nomargin { margin: 0; }
-  button { padding: 0; border: none; background: none; }
+  button { border: none; }
 
 </style>
