--- a/src/pages/kalendar.astro
+++ b/src/pages/kalendar.astro
@@ -57,9 +57,9 @@ import Layout from '@layouts/Layout.astro'
   .event__date, .event__place { font-weight: 500; }
   .event__description { margin-top: 1rem; font-size: 1.2rem; }
   button {
-
     font-family: 'Montserrat';
-    background:  #f4ae00;
+    background: #00336e;
+    color: white;
     padding: 12px 18px;
     margin: 16px 0;
     cursor: pointer;
