--- a/src/pages/worms.astro
+++ b/src/pages/worms.astro
@@ -15,7 +15,7 @@ import Layout from '@layouts/Layout.astro'
         Letos je 15. výročí od vydání legendárních Worms: Armageddon. Přijďte si otestovat své schopnosti v této hře s ostatními v rámci sousedského turnaje v námi oblíbeném klubu Futra!
       </p>
       <p>
-        Turnaj bude probíhat v sobotu 9. listopadu od 16:00 v prostorách klubu Futra (Masarykova 1000, Orlová). K dispozici bude velkoplošný projektor, kde bude možno sledovat průběh hry, a ovládání klávesnicí či gamepadem dle libosti. Systém turnaje bude upřesněn dle počtu přihlášených.
+        Turnaj bude probíhat v sobotu 9. listopadu 2024 od 16:00 v prostorách klubu Futra (Masarykova 1000, Orlová). K dispozici bude velkoplošný projektor, kde bude možno sledovat průběh hry, a ovládání klávesnicí či gamepadem dle libosti. Systém turnaje bude upřesněn dle počtu přihlášených.
       </p>
       <p>
         Postup příhlášení:
