--- a/src/pages/worms.astro
+++ b/src/pages/worms.astro
@@ -5,7 +5,7 @@ import Layout from '@layouts/Layout.astro'
 ---
 
 <Layout>
-  <Jumbotron title="Turnaj ve WORMS" image="worms.jpg" position="center 6%" />
+  <Jumbotron title="Turnaj ve WORMS 💥💣☢️ " image="worms.jpg" position="center 6%" />
   <div class="submenu">
     <a href="#uvod">Úvod</a> - <a href="#registrace">Registrace</a> - <a href="#kontakt">Kontakt</a> - <a href="#prihlaseni">Seznam přihlášených</a>
   </div>
