--- a/src/pages/worms.astro
+++ b/src/pages/worms.astro
@@ -31,7 +31,7 @@ import Layout from '@layouts/Layout.astro'
       <img src="/img/qrworms.png" alt="QR kód pro platbu startovného" width="200" style="display: block; margin: auto;"/>
 
       <div class="anchor" id="kontakt"></div>
-      <p>V případě jakýchkoliv dotazů nás neváhejte kontaktovat na e-mailu orlova@sousedi.net nebo osobně našeho koordinátora Jaroslava Kameňa na tel. 608 552 333.</p>
+      <p>Událost najdete taky na <a href="https://www.facebook.com/events/507000202093071/">Facebooku</a>. V případě jakýchkoliv dotazů nás neváhejte kontaktovat na e-mailu orlova@sousedi.net nebo osobně našeho koordinátora Jaroslava Kameňa na tel. 608 552 333.</p>
 
       <div class="anchor" id="prihlaseni"></div>
       <p>Seznam úspěšné zaregistraných týmů bude průběžně zveřejňován zde.</p>
