--- a/src/pages/worms.astro
+++ b/src/pages/worms.astro
@@ -62,4 +62,5 @@ import Layout from '@layouts/Layout.astro'
     box-shadow: 0 0 10px black;
   }
   .anchor {position: relative; top: -20px;}
+  html { scroll-behavior: smooth; }
 </style>
