--- a/src/pages/worms.astro
+++ b/src/pages/worms.astro
@@ -15,7 +15,7 @@ import Layout from '@layouts/Layout.astro'
         Letos je 15. výročí od vydání legendárních Worms: Armageddon. Přijďte si otestovat své schopnosti v této hře s ostatními v rámci sousedského turnaje v námi oblíbeném klubu Futra!
       </p>
       <p>
-        Turnaj bude probíhat v sobotu 9. listopadu 2024 od 16:00 v prostorách klubu Futra (Masarykova 1000, Orlová). K dispozici bude velkoplošný projektor, kde bude možno sledovat průběh hry, a ovládání klávesnicí či gamepadem dle libosti. Systém turnaje bude upřesněn dle počtu přihlášených.
+        Turnaj bude probíhat <b>v sobotu 9. listopadu 2024 od 16:00</b> v prostorách klubu Futra (Masarykova 1000, Orlová). K dispozici bude velkoplošný projektor, kde bude možno sledovat průběh hry, a ovládání klávesnicí či gamepadem dle libosti. Systém turnaje bude upřesněn dle počtu přihlášených.
       </p>
       <p>
         Postup příhlášení:
@@ -34,7 +34,7 @@ import Layout from '@layouts/Layout.astro'
       <p>Událost najdete taky na <a href="https://www.facebook.com/events/507000202093071/">Facebooku</a>. V případě jakýchkoliv dotazů nás neváhejte kontaktovat na e-mailu orlova@sousedi.net nebo osobně našeho koordinátora Jaroslava Kameňa na tel. 608 552 333.</p>
 
       <div class="anchor" id="prihlaseni"></div>
-      <p>Seznam úspěšné zaregistraných týmů bude průběžně zveřejňován zde.</p>
+      <p>Seznam úspěšné zaregistrovaných týmů bude průběžně zveřejňován zde.</p>
   </main>
 </Layout>
 
