--- a/src/pages/worms.astro
+++ b/src/pages/worms.astro
@@ -57,6 +57,7 @@ import Layout from '@layouts/Layout.astro'
     padding: 8px;
     width: 100%;
     background: white;
+    box-sizing: border-box;
   }
   .submenu:stuck {
     box-shadow: 0 0 10px black;
