--- a/src/pages/worms.astro
+++ b/src/pages/worms.astro
@@ -17,17 +17,13 @@ import Layout from '@layouts/Layout.astro'
       <p>
         Turnaj bude probíhat <b>v sobotu 9. listopadu 2024 od 16:00</b> v prostorách klubu Futra (Masarykova 1000, Orlová). K dispozici bude velkoplošný projektor, kde bude možno sledovat průběh hry, a ovládání klávesnicí či gamepadem dle libosti. Systém turnaje bude upřesněn dle počtu přihlášených.
       </p>
-      <p>
-        Postup příhlášení:
+      <p style="text-align: center; font-weight: bold; font-size: 150%;">
+        Vyplňte formulář:
       </p>
-      <ol>
-        <li>Vyplňte registrační formulář zde na stránce</li>
-        <li>Uhraďte startovné 50,- Kč platbou na účet 1126400063/3030 s vaším jménem uvedeným ve zprávě pro příjemce</li>
-      </ol>
 
       <div class="anchor" id="registrace"></div>
       <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfB9sjclVedDIA8W1qepB8VqSjS5P0T1XfGd_IlvlpSzFK8_w/viewform?embedded=true" width="100%" frameborder="0" marginheight="0" marginwidth="0">Načítání…</iframe>
-      <p>Pro dokončení registrace po úspěšném odeslání formuláře zašlete prosím na účet 1126400063/3030 startovné 50,- Kč s vaším jménem ve zprávě pro příjemce.</p>
+      <p>Registraci dokočíte zasláním startovného 50,- Kč na účet 1126400063/3030 nebo jeho zaplacením na místě. <b>Prvních 20 přihlášených účastníků obdrží na baru welcome drink zdarma!</b></p>
       <img src="/img/qrworms.png" alt="QR kód pro platbu startovného" width="200" style="display: block; margin: auto;"/>
 
       <div class="anchor" id="kontakt"></div>
