--- a/src/pages/worms.astro
+++ b/src/pages/worms.astro
@@ -23,14 +23,18 @@ import Layout from '@layouts/Layout.astro'
 
       <div class="anchor" id="registrace"></div>
       <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfB9sjclVedDIA8W1qepB8VqSjS5P0T1XfGd_IlvlpSzFK8_w/viewform?embedded=true" width="100%" frameborder="0" marginheight="0" marginwidth="0">Načítání…</iframe>
-      <p>Registraci dokočíte zasláním startovného 50,- Kč na účet 1126400063/3030 nebo jeho zaplacením na místě. <b>Prvních 20 přihlášených účastníků obdrží na baru welcome drink zdarma!</b></p>
+      <p>Registraci dokočíte zasláním startovného 50,- Kč na účet 1126400063/3030 nebo jeho zaplacením na místě. <b>Prvních 20 přihlášených účastníků obdrží na baru welcome drink v ceně startovného.</b></p>
       <img src="/img/qrworms.png" alt="QR kód pro platbu startovného" width="200" style="display: block; margin: auto;"/>
 
       <div class="anchor" id="kontakt"></div>
       <p>Událost najdete taky na <a href="https://www.facebook.com/events/507000202093071/">Facebooku</a>. V případě jakýchkoliv dotazů nás neváhejte kontaktovat na e-mailu orlova@sousedi.net nebo osobně našeho koordinátora Jaroslava Kameňa na tel. 608 552 333.</p>
 
       <div class="anchor" id="prihlaseni"></div>
-      <p>Seznam úspěšné zaregistrovaných týmů bude průběžně zveřejňován zde.</p>
+      <p>Seznam úspěšné zaregistrovaných týmů je průběžně zveřejňován zde:</p>
+      <ol>
+        <li>Piráti z Karybníku</li>
+        <li>Scientists</li>
+      </ol>
   </main>
 </Layout>
 
