--- a/src/pages/worms.astro
+++ b/src/pages/worms.astro
@@ -15,7 +15,10 @@ import Layout from '@layouts/Layout.astro'
         Letos je 15. výročí od vydání legendárních Worms: Armageddon. Přijďte si otestovat své schopnosti v této hře s ostatními v rámci sousedského turnaje v námi oblíbeném klubu Futra!
       </p>
       <p>
-        Turnaj bude probíhat <b>v sobotu 9. listopadu 2024 od 16:00</b> v prostorách klubu Futra (Masarykova 1000, Orlová). K dispozici bude velkoplošný projektor, kde bude možno sledovat průběh hry, a ovládání klávesnicí či gamepadem dle libosti. Systém turnaje bude upřesněn dle počtu přihlášených.
+        Turnaj bude probíhat <b>v sobotu 9. listopadu 2024 od 16:00</b> v prostorách klubu Futra (Masarykova 1000, Orlová).
+      </p>
+      <p>
+        Pro účast nepotřebujete hru, počítač, ani být online. Turnaj proběhne klasickým oldschool offline hotseat způsobem, tj. hráči se budou střídat u jednoho stroje napojeného na velkoplošný projektor, kde bude možno sledovat průběh hry, a pro ovládání bude k dispozici klávesnice i gamepad. Systém turnaje bude upřesněn dle počtu přihlášených.
       </p>
       <p style="text-align: center; font-weight: bold; font-size: 150%;">
         Vyplňte formulář:
@@ -23,7 +26,7 @@ import Layout from '@layouts/Layout.astro'
 
       <div class="anchor" id="registrace"></div>
       <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfB9sjclVedDIA8W1qepB8VqSjS5P0T1XfGd_IlvlpSzFK8_w/viewform?embedded=true" width="100%" frameborder="0" marginheight="0" marginwidth="0">Načítání…</iframe>
-      <p>Registraci dokočíte zasláním startovného 50,- Kč na účet 1126400063/3030 nebo jeho zaplacením na místě. <b>Prvních 20 přihlášených účastníků obdrží na baru welcome drink v ceně startovného.</b></p>
+      <p>Registraci dokočíte zasláním startovného 50,- Kč na účet 1126400063/3030 nebo jeho zaplacením na místě. <b>Prvních 20 účastníků přihlášených online obdrží na baru welcome drink v ceně startovného.</b></p>
       <img src="/img/qrworms.png" alt="QR kód pro platbu startovného" width="200" style="display: block; margin: auto;"/>
 
       <div class="anchor" id="kontakt"></div>
